Added new posts to posts

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,7 +1,7 @@
-<h1>Scribble</h1>
-
+<img src="https://camo.githubusercontent.com/c0fa788c04276e154ec92e5ea05aa5c6692f43ea/68747470733a2f2f646c2e64726f70626f7875736572636f6e74656e742e636f6d2f732f386672663872626c7736706e7064732f686970737465726c6f676f67656e657261746f725f313433383030373038373739332e706e673f646c3d30">
+<%= link_to "New Post",  new_post_path%>
 <% @posts.each do |post| %>
-<h2> <%= post.post_body %> </h2>
+<h2> <%= link_to post.post_body, post %> </h2>
 <h4> <%= post.author %> </h4>
-<h5> <%= post.create_at %> <h/5>
+<h5> <%= post.create_at %> </h5>
 <% end %>
