--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,1 +1,12 @@
-This is show page
+
+<h3> <%= @post.post_body %> </h2>
+<h4> <%= @post.author %> </h4>
+<h5> <%= @post.create_at %> </h5>
+
+<h3>Comments</h3>
+<%= link_to "New Comment",  new_post_comment_path(@post)%>
+<% @post.comments.each do |comment| %>
+<h3> <%= comment.comment_body %> </h2>
+<h4> <%= comment.name %> </h4>
+<h5> <%= comment.create_at %> </h5>
+<% end %>
