--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -1,11 +1,11 @@
-<%= form_for(@post, @comment) do |f| %>
+<%= form_for([@post, @comment]) do |f| %>
 
-<%= f.label :name %>
-<%= f.text_field :name %>
+<%= f.label :name %><br />
+<%= f.text_field :name %><br />
 
-<%= f.label :comment_body %>
-<%= f.text_area :comment_body %>
+<%= f.label :comment_body %><br />
+<%= f.text_area :comment_body, size: "60x12" %><br />
 
-<%= f.submit "create" %>
+<%= f.submit "Add Comment" %>
 
 <% end %>
