--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -6,5 +6,5 @@
 <%= f.label :post_body %><br />
 <%= f.text_area :post_body, size: "60x12" %>
 
-<%=  f.submit "Create" %>
+<%=  f.submit "Add Post" %>
 <% end %>
