--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,4 @@
-
+<%= link_to "New Post", edit_post_path %>
 <h3> <%= @post.post_body %> </h2>
 <h4> <%= @post.author %> </h4>
 <h5> <%= @post.create_at %> </h5>
