--- a/app/views/comments/edit.html.erb
+++ b/app/views/comments/edit.html.erb
@@ -1,1 +1,10 @@
-Edit comments
+<%= form_for [@post, @comment], method: :put do |f| %>
+
+<%= f.label :name %><br />
+<%= f.text_field :name %><br />
+
+<%= f.label :comment_body %><br />
+<%= f.text_area :comment_body, size: "60x12" %><br />
+
+<%=  f.submit "Edit Comment" %>
+<% end %>
