--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,12 +1,12 @@
 <h1> <%= @post.post_body %> </h1>
-<h4> <%= @post.author %> </h4>
+<h4> - <%= @post.author %> </h4>
 <h5> <%= @post.create_at %> </h5>
 
 <h3>Comments:</h3>
 <%= link_to "New Comment",  new_post_comment_path(@post)%>
 <% @post.comments.each do |comment| %>
 <h3> <%= link_to comment.comment_body, post_comment_path(@post, comment) %> </h3>
-<h4> <%= comment.name %> </h4>
+<h4> - <%= comment.name %> </h4>
 <h5> <%= comment.create_at %> </h5>
 <% end %>
 
