--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -1,1 +1,3 @@
+# AM: Looks like you didn't need this page! If you're interested in taking routes to the next level, take a look at the "Restricted Resources" section here: http://guides.rubyonrails.org/routing.html
+
 this is the comments index
